feat(application): pagination, missing read use cases, AuthenticatedUser command
- Fix UserNotFoundException and CenterNotFoundException to extend ResourceNotFoundException so GlobalExceptionHandler maps them to HTTP 404
- Add paginated findByUserId(UUID, int, int) to BookingRepository; implement via Spring Data Page in BookingRepositoryImpl
- Update GetBookingHistoryQuery to carry page/size; GetBookingHistoryUseCase now returns PageResult<Booking>
- Replace fake pagination in BookingApiMapper.toPagedBookingHistory with real PageResult; remove unused toQuery helper
- Update UserController.getUserBookings to forward page/size to the query
- Update GetBookingHistoryUseCaseTest to match new paginated API

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>